Update recommended JVM options